argocd/nginx-test-app/00-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx-test
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
