argocd/nginx-test-app/02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx-test
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16
spec:
  tls:
  - hosts:
    - test.secschool.net
    secretName: nginx-tls
  rules:
  - host: "test.secschool.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
